--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-window": "^1.8.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170"
+    "@types/lodash": "^4.14.170",
+    "@types/react-window": "^1.8.3"
   }
 }
